--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@inject ASP.NET_MVC_Forum.Services.User.IUserService userService;
+@inject ASP.NET_MVC_Forum.Services.User.IUserDataService userDataService;
 @{
     @using Microsoft.AspNetCore.Identity
     @using static ASP.NET_MVC_Forum.Data.Constants.RoleConstants;
@@ -11,7 +11,7 @@
 
     @if (SignInManager.IsSignedIn(User))
     {
-        string currentUserAvatar = userService.GetUserAvatar(this.User.Id()); // userAvatarSource
+        string currentUserAvatar = await userDataService.GetUserAvatarAsync(this.User.Id()); // userAvatarSource
 
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle font-weight-bolder" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
