--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ASP.NET_MVC_Forum.Models.Post.ViewPostViewModel;
 @using static ASP.NET_MVC_Forum.Data.Constants.RoleConstants;
 @using static ASP.NET_MVC_Forum.Infrastructure.Extensions.ClaimsPrincipalExtensions;
-@inject ASP.NET_MVC_Forum.Services.User.IUserDataService userDataService;
+@inject ASP.NET_MVC_Forum.Services.Data.User.IUserDataService userDataService;
 
 @{
     ViewData["Title"] = "View Post";
