--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
@@ -1,8 +1,16 @@
 ﻿@model List<ASP.NET_MVC_Forum.Areas.Admin.Models.CommentReport.CommentReportViewModel>;
-@if (TempData.ContainsKey("Message"))
+@using static ASP.NET_MVC_Forum.Data.Constants.ClientMessage;
+
+@if (TempData.ContainsKey(MessageType.ErrorMessage))
 {
     <div class="alert alert-success text-center" role="alert">
-        @TempData["Message"]
+        @TempData[MessageType.ErrorMessage]
+    </div>
+}
+else if (TempData.ContainsKey(MessageType.SuccessMessage))
+{
+    <div class="alert alert-success text-center" role="alert">
+        @TempData[MessageType.SuccessMessage]
     </div>
 }
 
