--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
@@ -55,7 +55,7 @@ else if (TempData.ContainsKey(MessageType.SuccessMessage))
                                     @if (!report.IsDeleted)
                                     {
                                         <form method="post">
-                                            <button type="submit" asp-area="Admin" asp-controller="CommentReports" asp-action="DeleteAndResolve" asp-route-commentId="@report.CommentId" asp-route-reportId="@report.Id" class="btn btn-danger">Delete comment and resolve</button>
+                                            <button type="submit" asp-area="Admin" asp-controller="CommentReports" asp-action="DeleteAndResolve" asp-route-reportId="@report.Id" class="btn btn-danger">Delete comment and resolve</button>
                                         </form>
 
                                         <a asp-area="Admin" asp-controller="CommentReports" asp-action="Resolve" asp-route-reportId="@report.Id" class="btn btn-success">Mark Resolved</a>
