--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/PostReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/PostReports/Index.cshtml
@@ -1,8 +1,16 @@
 ﻿@model List<ASP.NET_MVC_Forum.Areas.Admin.Models.PostReport.PostReportViewModel>;
-@if (TempData.ContainsKey("Message"))
+@using static ASP.NET_MVC_Forum.Data.Constants.ClientMessage;
+
+@if (TempData.ContainsKey(MessageType.SuccessMessage))
 {
     <div class="alert alert-success text-center" role="alert">
-        @TempData["Message"]
+        @TempData[MessageType.SuccessMessage]
+    </div>
+}
+else if (TempData.ContainsKey(MessageType.SuccessMessage))
+{
+    <div class="alert alert-danger text-center" role="alert">
+        @TempData[MessageType.ErrorMessage]
     </div>
 }
 
@@ -10,10 +18,10 @@
 
     @if (Model.Count == 0)
     {
-    <div class="text-center text-white">
-        <h2>Everything looks good !</h2>
-        <h3>All reports are cleared !</h3>
-    </div>
+        <div class="text-center text-white">
+            <h2>Everything looks good !</h2>
+            <h3>All reports are cleared !</h3>
+        </div>
     }
 
 
