--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@inject ASP.NET_MVC_Forum.Web.Services.Data.User.IUserDataService userDataService;
+@inject ASP.NET_MVC_Forum.Data.Contracts.IUserDataService userDataService;
 @{
+    @using ASP.NET_MVC_Forum.Infrastructure.Extensions
     @using Microsoft.AspNetCore.Identity
     @using static ASP.NET_MVC_Forum.Domain.Constants.RoleConstants;
-    @using static ASP.NET_MVC_Forum.Web.Infrastructure.Extensions.ClaimsPrincipalExtensions;
 }
 
 <ul class="navbar-nav">
