fixed view imports added user id for seeding posts

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Users/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ASP.NET_MVC_Forum.Web.Areas.Admin.Models.User.UserViewModel>;
+﻿@model List<ASP.NET_MVC_Forum.Domain.Models.User.UserViewModel>;
 @using static ASP.NET_MVC_Forum.Domain.Constants.ClientMessage.MessageType
 @using static ASP.NET_MVC_Forum.Domain.Constants.RoleConstants;
 
