--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -2,7 +2,7 @@
 @model ASP.NET_MVC_Forum.Domain.Models.Post.ViewPostViewModel;
 @using static ASP.NET_MVC_Forum.Domain.Constants.RoleConstants;
 @using static ASP.NET_MVC_Forum.Infrastructure.Extensions.ClaimsPrincipalExtensions;
-@inject ASP.NET_MVC_Forum.Data.Contracts.IUserDataService userDataService;
+@inject ASP.NET_MVC_Forum.Data.Contracts.IUserRepository userDataService;
 
 @{
     ViewData["Title"] = "View Post";
@@ -13,7 +13,7 @@
 
     if (this.User.Identity.IsAuthenticated)
     {
-        currUserAvatar = await userDataService.GetUserAvatarAsync(this.User.Id());
+        currUserAvatar = await userDataService.GetAvatarAsync(this.User.Id());
     }
     else
     {
