--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Add.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Add.cshtml
@@ -29,10 +29,10 @@
         </div>
         <div class="text-center mt-3">
             <span class="text-center text-danger " asp-validation-for="Title"></span>
-            @if (TempData.ContainsKey(ErrorMessage))
+            @if (TempData.ContainsKey(ERROR_MESSAGE))
             {
                 <div class="text-center mt-3">
-                    <span class="text-center text-danger ">@TempData[ErrorMessage]</span>
+                    <span class="text-center text-danger ">@TempData[ERROR_MESSAGE]</span>
                 </div>
             }
             @*HtmlContent property's validation error message is displayed via TempData as for some reason it refuses to display the traditional way*@
