fixed bug where seeded admin was not added the admin role
renamed role constants

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
 
                     @*=======Users========*@
 
-                    @if (User.IsInRole(AdminRoleName))
+                    @if (User.IsInRole(ADMIN_ROLE))
                     {
                         <a class="nav-link collapsed" aria-expanded="false" asp-area="Admin" asp-controller="Users" asp-action="Index">
                             <div class="sb-nav-link-icon"><i class="far fa-user"></i></div>
