fixed bug where default image wasn't added upon user registration
added model state validation with custom model for chat controller

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using ASP.NET_MVC_Forum.Domain.Entities
+@inject SignInManager<ExtendedIdentityUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
