improved post report validation refactored post report and post report validation service

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -61,8 +61,8 @@
                         </a>
                         <div class="collapse" id="collapsePostReports" aria-labelledby="headingOne" data-bs-parent="#collapseReports">
                             <nav class="ml-4 sb-sidenav-menu-nested nav">
-                                <a class="nav-link" asp-area="Admin" asp-controller="PostReports" asp-action="Index" asp-route-reportStatus="Active"><i class="fas fa-exclamation-triangle mr-2"></i>Active</a>
-                                <a class="nav-link" asp-area="Admin" asp-controller="PostReports" asp-action="Index" asp-route-reportStatus="Deleted"><i class="fas fa-check mr-2"></i>Resolved</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="PostReports" asp-action="Index" asp-route-reportStatus=@ACTIVE_STATUS><i class="fas fa-exclamation-triangle mr-2"></i>Active</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="PostReports" asp-action="Index" asp-route-reportStatus=@DELETED_STATUS><i class="fas fa-check mr-2"></i>Resolved</a>
                             </nav>
                         </div>
                         @*=======CommentReports========*@
@@ -74,8 +74,8 @@
                         </a>
                         <div class="collapse" id="collapseCommentReports" aria-labelledby="headingOne" data-bs-parent="#collapseReports">
                             <nav class="ml-4 sb-sidenav-menu-nested nav">
-                                <a class="nav-link" asp-area="Admin" asp-controller="CommentReports" asp-action="Index" asp-route-reportStatus=@REPORT_ACTIVE_STATUS><i class="fas fa-exclamation-triangle mr-2"></i>Active</a>
-                                <a class="nav-link" asp-area="Admin" asp-controller="CommentReports" asp-action="Index" asp-route-reportStatus=@REPORT_DELETED_STATUS><i class="fas fa-check mr-2"></i>Resolved</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="CommentReports" asp-action="Index" asp-route-reportStatus=@ACTIVE_STATUS><i class="fas fa-exclamation-triangle mr-2"></i>Active</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="CommentReports" asp-action="Index" asp-route-reportStatus=@DELETED_STATUS><i class="fas fa-check mr-2"></i>Resolved</a>
                             </nav>
                         </div>
                     </div>
